--- a/src/webapp/tram/templates/base.html
+++ b/src/webapp/tram/templates/base.html
@@ -8,24 +8,29 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/fas-all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tram.css' %}">
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <link rel="icon" href="{% static 'img/tram-logo.png' %}">
     <meta name="theme-color" content="#7952b3">
-
-    <style>
-        body {
-            display: flex;
-            align-items: center;
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-    </style>
 </head>
-<body class="text-center">
+<body>
+    <header class="navbar navbar-expand-md">
+        <nav class="container-xxl d-flex justify-content-between">
+            <a class="navbar-brand" href="/">
+                <img src="{% static 'img/tram-logo.png' %}" alt="TRAM - Threat Report ATT&amp;CK Mapper" width="100" height="100">
+            </a>
+            <form class="d-flex m-0" id="id-upload-form">
+                {% csrf_token %}
+                <label for="id-upload" class="btn btn-primary btn-lg" title="Upload File">
+                    <i class="fas fa-upload"></i>
+                </label>
+                <input type="file" id="id-upload" style="display: none; height: max-content;">
+            </form>
+        </nav>
+    </header>
     {% block body %}
     {% endblock %}
 </body>
