--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -21,13 +21,20 @@
             <a class="navbar-brand" href="/">
                 <img src="{% static 'img/tram-logo.png' %}" alt="TRAM - Threat Report ATT&amp;CK Mapper" width="100" height="100">
             </a>
-            <form class="d-flex m-0" id="id-upload-form">
-                {% csrf_token %}
-                <label for="id-upload" class="btn btn-primary btn-lg" title="Upload File">
-                    <i class="fas fa-upload"></i>
-                </label>
-                <input type="file" id="id-upload" style="display: none; height: max-content;">
-            </form>
+            <ul class="navbar-nav d-flex m-0">
+                <li class="navbar-item me-1">
+                    <form id="id-upload-form">
+                    {% csrf_token %}
+                    <label for="id-upload" class="btn btn-primary btn-lg" title="Upload File">
+                        <i class="fas fa-upload"></i>
+                    </label>
+                    <input type="file" id="id-upload" style="display: none; height: max-content;">
+                    </form>
+                </li>
+                <li class="navbar-item">
+                    <a class="btn-outline-danger btn" href="/logout">Logout</a>
+                </li>
+            </ul>
         </nav>
     </header>
     {% block body %}
