--- a/src/tram/tram/templates/registration/login.html
+++ b/src/tram/tram/templates/registration/login.html
@@ -1,10 +1,22 @@
-{% extends 'base.html' %}
 
 {% load static %}
 
-{% block title %}TRAM Login{% endblock %}
+<html>
+<head>
+    <title>Login</title>
 
-{% block body %}
+    <!-- CSS only -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fas-all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tram.css' %}">
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <link rel="icon" href="{% static 'img/tram-logo.png' %}">
+    <meta name="theme-color" content="#7952b3">
+</head>
+<body>
 
 <style>
     .form-signin {
@@ -21,15 +33,13 @@
         <img class="mb-4" src="{% static 'img/tram-logo.png' %}" alt="TRAM - Threat Report ATT&CK Mapper" width="200" height="200">
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         <label for="id_username" class="visually-hidden">Username</label>
-        <input type="username" id="id_username" class="form-control" placeholder="Username" required autofocus>
+        <input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus>
         <label for="id_password" class="visually-hidden">Password</label>
-        <input type="password" id="id_password" class="form-control" placeholder="Password" required>
+        <input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required>
         <hr>
-        {{ form.as_p }}
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     </form>
 </main>
+</body>
 
-
-
-{% endblock %}
+</html>
