--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -1,20 +1,32 @@
 {% load static %}
 
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
 <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Default Title{% endblock %}</title>
 
     <!-- CSS only -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/fas-all.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/tram.css' %}">
 
+    <script type="text/javascript">
+        const CSRF_TOKEN = "{{ csrf_token }}";
+    </script>
+
     <!-- JS, Popper.js, and jQuery -->
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/base.js' %}"></script>
     <link rel="icon" href="{% static 'img/tram-logo.png' %}">
     <meta name="theme-color" content="#7952b3">
+    <meta charset="utf-8">
+    {% block head %} {% endblock %}
 </head>
 <body>
     <header class="navbar navbar-expand-md">
@@ -29,7 +41,7 @@
                 <li class="navbar-item me-1">
                     <form id="id-upload-form">
                     {% csrf_token %}
-                    <label for="id-upload" class="btn btn-primary btn-lg" title="Upload File">
+                    <label for="id-upload" class="btn btn-primary" title="Upload File">
                         <i class="fas fa-upload"></i>
                     </label>
                     <input type="file" id="id-upload" style="display: none; height: max-content;">
@@ -41,8 +53,10 @@
             </ul>
         </nav>
     </header>
-    {% block body %}
-    {% endblock %}
+    <div class="container-xxl text-center">
+        {% block body %}
+        {% endblock %}
+    </div>
 </body>
 
 </html>
