--- a/src/tram/tram/templates/analyze.html
+++ b/src/tram/tram/templates/analyze.html
@@ -17,15 +17,9 @@
 
 <div class="row">
     <div id="sentence-container" class="col overflow-auto">
-        <h4>Report SentencesXXX</h4>
+        <h4>Report Sentences</h4>
         <table id="sentence-table" class="table table-striped table-hover">
-            {% for sentence in sentences %}
-                <tr id="sentence-row-{{sentence.id}}" style="cursor: pointer;" onclick="loadSentenceMappings({{sentence.id}})">
-                    <td>
-                        {{ sentence.text }}
-                    </td>
-                </tr>
-            {% endfor %}
+            <!-- Contents rendered by JavaScript -->
         </table>
     </div>
     <div class="col" id="mapping-container">
