--- a/src/tram/tram/static/css/tram.css
+++ b/src/tram/tram/static/css/tram.css
@@ -2,6 +2,16 @@ body {
     background-color: #f5f5f5;
 }
 
-.draggable {
-    cursor: grab;
+.navbar {
+    background-color: #6241C5;
+}
+
+.navbar-brand {
+    color: white;
+}
+
+.btn-warning
+
+a:hover {
+    color: #F0F1F2;
 }
