--- a/src/tram/tram/templates/registration/login.html
+++ b/src/tram/tram/templates/registration/login.html
@@ -13,11 +13,19 @@
     <!-- JS, Popper.js, and jQuery -->
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <link rel="icon" href="{% static 'img/tram-logo.png' %}">
-    <meta name="theme-color" content="#7952b3">
+    <link rel="icon" href="{% static 'img/favicon-32x32.png' %}">
 </head>
 <body>
-
+    <header class="navbar  navbar-fixed-top navbar-expand-md">
+        <nav class="container-xxl d-flex justify-content-between">
+            <a class="navbar-brand pt-0 pb-0" href="/">
+                <h1>
+                    <img src="{% static 'img/me_300x300.jpeg' %}" alt="TRAM - Threat Report ATT&amp;CK Mapper">
+                    TRAM
+                </h1>
+            </a>
+        </nav>
+    </header>
 <style>
     .form-signin {
         width: 100%;
@@ -30,14 +38,12 @@
 <main class="form-signin">
     <form method="POST">
         {% csrf_token %}
-        <img class="mb-4" src="{% static 'img/tram-logo.png' %}" alt="TRAM - Threat Report ATT&CK Mapper" width="200" height="200">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         <label for="id_username" class="visually-hidden">Username</label>
         <input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus>
         <label for="id_password" class="visually-hidden">Password</label>
         <input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required>
         <hr>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign In</button>
     </form>
 </main>
 </body>
