--- a/src/tram/tram/templates/index.html
+++ b/src/tram/tram/templates/index.html
@@ -47,8 +47,15 @@
       <td>
         <div class="btn-group">
           <a href="/analyze/{{ report.id }}" class="btn btn-sm btn-outline-secondary">Analyze</a>
-          <a href="#" class="btn btn-sm btn-outline-secondary">Export</a>
-          <a href="#" class="btn btn-sm btn-outline-secondary">Download</a>
+          <div class="dropdown btn-group">
+            <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="export-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Export
+            </button>
+            <div class="dropdown-menu" aria-labelledby="export-dropdown">
+              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?format=json">JSON</a>
+            </div>
+          </div>
+          <!-- <a href="#" class="btn btn-sm btn-outline-secondary">Download</a> -->
         </div>
       </td>
       <td>
