--- a/src/tram/tram/templates/analyze.html
+++ b/src/tram/tram/templates/analyze.html
@@ -16,7 +16,7 @@
 <h3 class="display-4 text-center">{{ report_name }}</h3>
 
 <div class="row">
-    <div id="sentence-container" class="col overflow-auto">
+    <div id="sentence-container" class="col overflow-scroll" style="max-height: 500px;">
         <h4>Report Sentences</h4>
         <table id="sentence-table" class="table table-striped table-hover">
             <!-- Contents rendered by JavaScript -->
