Initial checkin of ML Admin feature

--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -41,6 +41,9 @@
                 <li class="navbar-item me-1">
                     <a class="btn btn btn-outline-light" href="/admin">Database Admin</a>
                 </li>
+                <li>
+                    <a class="btn btn btn-outline-light" href="/ml">ML Admin</a>
+                </li>
                 <li class="navbar-item me-1">
                     <form id="id-upload-form">
                     {% csrf_token %}
