--- a/src/tram/tram/templates/ml_home.html
+++ b/src/tram/tram/templates/ml_home.html
@@ -8,7 +8,7 @@
 <h1>ML Admin</h1>
 <div class="container row">
   <div class="col-sm">
-    <h3>Accepted Sentences Per Technique</h3>
+    <h3>Sentences Per Technique</h3>
     <table id="technique-sentence-table" class="table table-striped table-hover">
       <caption>Technique Sentence Table</caption>
       <tbody>
@@ -17,13 +17,17 @@
           <th scope="col">Technique ID</th>
           <th scope="col">Technique Name</th>
           <th scope="col">Accepted Sentences</th>
+          <th scope="col">Pending Sentences</th>
+          <th scope="col">Total Sentences</th>
         </tr>
         {% for t in techniques %}
         <tr>
           <td>{{ forloop.counter }}</td>
           <td><a href="{{ t.attack_url }}">{{ t.attack_id }}</a></td>
           <td>{{ t.name }}</td>
-          <td>{{ t.sentence_count }}</td>
+          <td><a href="/ml/{{t.attack_id}}">{{ t.accepted_sentences }}</a></td>
+          <td><a href="/ml/{{t.attack_id}}">{{ t.pending_sentences }}</a></td>
+          <td><a href="/ml/{{t.attack_id}}">{{ t.total_sentences }}</a></td>
         </tr>
         {% endfor %}
       </tbody>
