--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -20,6 +20,8 @@ Sentences may contain additional mappings.
     <div id="sentence-container" class="col overflow-scroll" style="max-height: 500px;">
         <h4>Sentences</h4>
         <table id="sentence-table" class="table table-striped table-hover">
+            <caption>Sentences</caption>
+            <th>This table should be re-rendered and this text should not be visible.</th>
             <!-- Contents rendered by JavaScript -->
         </table>
     </div>
