--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -21,7 +21,7 @@ Sentences may contain additional mappings.
         <h4>Sentences</h4>
         <table id="sentence-table" class="table table-striped table-hover">
             <caption>Sentences</caption>
-            <th>This table should be re-rendered and this text should not be visible.</th>
+            <th scope="col">This table should be re-rendered and this text should not be visible.</th>
             <!-- Contents rendered by JavaScript -->
         </table>
     </div>
