--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -41,7 +41,7 @@ Sentences may contain additional mappings.
                 <form id="add-technique-form">
                     <select id="technique-select" class="form-select">
                         {% for technique in attack_techniques %}
-                        <option value="{{technique.id}}">{{technique.attack_id}} - {{technique.name}}</option>
+                        <option value="{{technique.attack_id}}">{{technique.attack_id}} - {{technique.name}}</option>
                         {% endfor %}
                     </select>
                     <input id="sentence-id" type="hidden" value="TBD">
@@ -49,7 +49,8 @@ Sentences may contain additional mappings.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button id="add-mapping-button" type="button" class="btn btn-primary" data-dismiss="modal" onclick="addMapping()">Add</button>
+                <button id="add-mapping-button" type="button" class="btn btn-primary" data-dismiss="modal"
+                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()))">Add</button>
             </div>
         </div>
     </div>
