Add ML Confidence Threshold Setting

--- a/src/tram/tram/templates/ml_home.html
+++ b/src/tram/tram/templates/ml_home.html
@@ -70,6 +70,11 @@
             <td>{{ML_ACCEPT_THRESHOLD}}</td>
             <td>Exclude Attack Techniques with less than the specified number of accepted sentences</td>
           </tr>
+          <tr>
+            <td>ML_CONFIDENCE_THRESHOLD</td>
+            <td>{{ML_CONFIDENCE_THRESHOLD}}</td>
+            <td>Do not proposed Attack Techniques if the confidence is below the threshold</td>
+          </tr>
         </tbody>
       </table>
     </div>
