WIP: add naive bayes model (#50)
* add nb model skeleton

* Start to remove get_indicators from ML model

* define model classes for naive bayes and logistic regression

* WIP commit for ML Admin

* Fix flake8; organize imports

* Initial steps toward refactor

* Add get_model, remove comments

* Store WIP

* Continued refactor

* Add training data fixtures

* Add wordnet to CI

* remove tram transformer model code

* WIP commit for ML Admin

* Move _filter_low_data_classes into get_training_data()

* Move get_mappings into base Model

* Remove unused functions

* Move DummyPipeline into DummyModel

* Fix sonar bugs

* Add scope=col for sonar

* Move shared code into base.js; fix add mapping bug

* Update ReportExport create to work with updated mapping API

* Remove filter_low_data_classes() - it was moved into get_training_data()

* Updates

* fix flake8 issue

* fix flake8 issues

* Improve tests

* Change test size to 0.2 per feedback

* Add ML Confidence Threshold Setting

* Improve test coverage

* clean up requirements.txt and comments in base.py

Co-authored-by: MarkDavidson <mdavidson@mitre-engenuity.org>
Co-authored-by: Mark Davidson <MarkDavidson@users.noreply.github.com>

--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -2,23 +2,26 @@
 
 {% load static %}
 
-{% block title %}TRAM - Analyze Report{% endblock %}
+{% block title %}TRAM - Technique Sentences{% endblock %}
 
 {% block head %}
-<script src="{% static 'js/analyze.js' %}"></script>
+<script src="{% static 'js/technique-sentences.js' %}"></script>
 <script type="text/javascript">
-    const REPORT_ID = parseInt({{ report_id }});
+    const ATTACK_ID = "{{ attack_id }}";
 </script>
 {% endblock %}
 
 {% block body %}
 
-<h3 class="display-4 text-center">{{ report_name }}</h3>
+<h3 class="display-4 text-center">Sentences Mapped to {{ attack_id }}</h3>
+Sentences may contain additional mappings.
 
 <div class="row">
     <div id="sentence-container" class="col overflow-scroll" style="max-height: 500px;">
-        <h4>Report Sentences</h4>
+        <h4>Sentences</h4>
         <table id="sentence-table" class="table table-striped table-hover">
+            <caption>Sentences</caption>
+            <th scope="col">This table should be re-rendered and this text should not be visible.</th>
             <!-- Contents rendered by JavaScript -->
         </table>
     </div>
