--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -18,10 +18,7 @@
     <!-- JS, Popper.js, and jQuery -->
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
-    <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/base.js' %}"></script>
     <link rel="icon" href="{% static 'img/favicon-32x32.png' %}">
     <meta name="theme-color" content="#7952b3">
