--- a/src/tram/tram/templates/index.html
+++ b/src/tram/tram/templates/index.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block body %}
+<h1>Reports</h1>
 <table id="report-table" class="table table-striped table-hover">
   <tbody>
     <tr>
