--- a/src/tram/tram/static/css/tram.css
+++ b/src/tram/tram/static/css/tram.css
@@ -10,6 +10,11 @@ body {
     color: white;
 }
 
-a:hover {
-    color: white;
+.footer {
+    width: 100%;
+    background-color: #f5f5f5;
+}
+
+.footer a {
+    color: gray;
 }
