--- a/src/tram/tram/templates/tram_documentation.html
+++ b/src/tram/tram/templates/tram_documentation.html
@@ -25,7 +25,7 @@
   </div>
   <div class="col-6">
     <h2>TRAM UI Components</h2>
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover" aria-label="tram ui components">
       <tbody>
         <tr>
           <th scope="col">Component</th>
