Added aria-label to tables

--- a/src/tram/tram/templates/ml_home.html
+++ b/src/tram/tram/templates/ml_home.html
@@ -9,8 +9,7 @@
 <div class="container row flex-nowrap">
   <div class="col-sm">
     <h3>Sentences Per Technique</h3>
-    <table id="technique-sentence-table" class="table table-striped table-hover">
-      <caption>Technique Sentence Table</caption>
+    <table id="technique-sentence-table" class="table table-striped table-hover" aria-label="Technique sentence table">
       <tbody>
         <tr>
           <th scope="col">#</th>
@@ -36,8 +35,7 @@
   <div class="col-sm">
     <div>
       <h3>ML Models</h3>
-      <table id="ml-models-table" class="table table-striped">
-        <caption>ML Models Table</caption>
+      <table id="ml-models-table" class="table table-striped" aria-label="ml models table">
         <tbody>
           <tr>
             <th scope="col">Model Name</th>
@@ -58,8 +56,7 @@
     </div>
     <div>
       <h3>ML Settings <a class="btn btn-primary-outline" href="/admin/constance/config/">Manage</a></h3>
-      <table id="ml-settings-table" class="table table-striped">
-        <caption>ML Settings Table</caption>
+      <table id="ml-settings-table" class="table table-striped" aria-label="Settings table">
         <tbody>
           <tr>
             <th scope="col">Setting</th>
