--- a/src/tram/tram/templates/tram_documentation.html
+++ b/src/tram/tram/templates/tram_documentation.html
@@ -73,7 +73,7 @@
   </div>
   <div class="col-6">
     <h2>Processing Pipeline</h2>
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover" aria-label="processing pipeline">
       <tbody>
         <tr>
           <th scope="col">#</th>
