--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -45,7 +45,7 @@
                     <label for="id-upload" class="btn btn btn-outline-light" title="Upload File">
                         <i class="fas fa-upload"></i>
                     </label>
-                    <input type="file" id="id-upload" style="display: none; height: max-content;" accept=".pdf,.docx,.html,.json">
+                    <input type="file" id="id-upload" style="display: none; height: max-content;" accept=".pdf,.docx,.html,.json,.txt">
                     </form>
                 </li>
                 <li class="navbar-item me-1">
