Go to next sentence when reviewing reports

--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -42,7 +42,7 @@
                 <li class="navbar-item me-1">
                     <form id="id-upload-form">
                     {% csrf_token %}
-                    <label for="id-upload" class="btn btn btn-outline-light" title="Upload File">
+                    <label for="id-upload" class="btn btn btn-outline-light" title="Upload File (valid: .pdf,.docx,.html,.json,.txt)">
                         <i class="fas fa-upload"></i>
                     </label>
                     <input type="file" id="id-upload" style="display: none; height: max-content;" accept=".pdf,.docx,.html,.json,.txt">
