--- a/src/tram/tram/templates/index.html
+++ b/src/tram/tram/templates/index.html
@@ -59,7 +59,7 @@
               Export
             </button>
             <div class="dropdown-menu" aria-labelledby="export-dropdown">
-              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?type=json">JSON</a>
+              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?format=json&?type=json">JSON</a>
               <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?type=docx">DOCX</a>
             </div>
           </div>
