feat(export): add number of mappings in analyze and redownload report button
1. In analyze mode, show the number of mappings to the left of each
   sentence.
2. Add a button to download the original report file, i.e. verbatim
   copy of what the user uploaded.

--- a/src/tram/tram/templates/index.html
+++ b/src/tram/tram/templates/index.html
@@ -62,7 +62,7 @@
               <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?format=json">JSON</a>
             </div>
           </div>
-          <!-- <a href="#" class="btn btn-sm btn-outline-secondary">Download</a> -->
+          <a href="/api/download/{{ report.name | cut:'Report for ' }}" class="btn btn-sm btn-outline-secondary">Download</a>
         </div>
       </td>
       <td>
