--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/fas-all.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/tram.css' %}">
+    <link rel="stylesheet" href="{% static 'css/select2.min.css' %}">
 
     <script type="text/javascript">
         const CSRF_TOKEN = "{{ csrf_token }}";
@@ -19,7 +20,9 @@
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/select2.min.js' %}"></script>
     <script src="{% static 'js/base.js' %}"></script>
+    
     <link rel="icon" href="{% static 'img/favicon-32x32.png' %}">
     <meta name="theme-color" content="#7952b3">
     <meta charset="utf-8">
