added search bar

--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -39,7 +39,7 @@ Sentences may contain additional mappings.
             </div>
             <div class="modal-body">
                 <form id="add-technique-form">
-                    <select id="technique-select" class="form-select">
+                    <select id="technique-select" class="form-select select2-use">
                         {% for technique in attack_techniques %}
                         <option value="{{technique.attack_id}}">{{technique.attack_id}} - {{technique.name}}</option>
                         {% endfor %}
