fixed technique_sentences page

--- a/src/tram/tram/templates/analyze.html
+++ b/src/tram/tram/templates/analyze.html
@@ -47,7 +47,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button id="add-mapping-button" type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()))">Add</button>
+                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()), false)">Add</button>
             </div>
         </div>
     </div>
