--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -45,12 +45,13 @@ Sentences may contain additional mappings.
                         {% endfor %}
                     </select>
                     <input id="sentence-id" type="hidden" value="TBD">
+                    <input id="report-id" type="hidden" value="TBD">
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button id="add-mapping-button" type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()))">Add</button>
+                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()), parseInt($('#report-id').val()))">Add</button>
             </div>
         </div>
     </div>
